--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <div class="column">
             <h2>About Me</h2>
             <p>Hi, my name is Adetola, and I love aviation and technology...</p>
+            <h2>Why I Love the Airbus A380</h2>
+            <p>The Airbus A380 is the world's largest passenger aircraft, known for its double-deck design and advanced engineering. It can carry over 800 passengers and offers an unmatched flying experience. The level of precision and innovation required to build such an aircraft reminds me of the complexity of cloud computing—both involve intricate systems working together seamlessly.</p>
             <h3>Here is Airbus A380 exterior look</h3>
             <img src="https://www.aerotime.aero/images/airbus_a380_taxiing_at_moscow_air_show_maks_2013-800x500.jpg" alt="Airbus A380 exterior look">
         </div>
